# minigpkg

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-test.yaml
r/: DESCRIPTION  NAMESPACE  configure
r/R/: cpp11.R  gpkg.R  minigpkg-package.R
r/man/: gpkg_open.Rd  minigpkg-package.Rd
r/src/: .gitignore  Makevars  cpp11.cpp  gpkg.cpp
r/tests/: testthat.R
r/tests/testthat/: test-gpkg.R
src/minigpkg/: nanoarrow.h  nanoarrow_sqlite3.c  nanoarrow_sqlite3.h  nanoarrow_sqlite3_bench.c  nanoarrow_sqlite3_test.cc
